# FoxClaw-Core

./: .gitattributes  .gitignore  CHANGELOG.md  HANDOFF.md  README.md  pyproject.toml  render.yaml
config/: apollo1_intake_lanes.json  apollo_courier_lanes.json  coinfox_discord_public_channels.example.json  db_schema.frozen.json  forecast_db_schema.frozen.json  foxclaw_commands.json  foxclaw_gym_drills.json  interaction_potential_v0.json  public_source_registry.json  publication_policy.json  self_funding_standard.json  source_discovery_inventory.json
docs/: CoinFox_Discord_Reset_Operator_Checklist.md  PROJECT_INDEX.md  a2_migration_context.md  anti_poisoning_v0.md  apollo1_standalone_intake.md  apollo_courier_v0.md  apollo_mesh_v0.md  apollo_node_coordination.md  architecture.md  brain_decision_math.md  coinfox_curated_packet_intake.md  coinfox_linkedin_about.md  coinfox_one_page_overview.md  curated_packet_soak_fixtures_v0.md  data_retention_and_privacy.md  db_schema.md  decisions.md  deferred.md  demo_readiness_2026_06_28.md  demo_script_2026_06_28.md  eastern_pine_ventures_landing_page_copy.md  engine_port_plan.md  first_encounter_guide.md  forecast_calibration.md  forecast_db_schema.md  forecast_desk_plan.md  forecast_learning_spine.md  forecast_receipt_contract.md  founder_node_security.md  foxclaw_coinfox_packet_contract.md  foxclaw_commands.md  foxclaw_edge_engine.md  foxclaw_gym.md  foxclaw_redshift_paper_boundary.md  foxclaw_v2_inventory.md  foxclaw_v2_overhaul_plan.md  interaction_potential_v0.md  invariants.md  kalshi_api_field_guide.md  (+18 more)
foxclaw/: __init__.py  (+6 more)
(+348 files in other folders)
